# fastestjsoninthewest

./: .bazelrc  .clang-format  .clang-tidy  .gitconfig  .gitignore  .gitmodules  .llvm_build_session.md  BINARY_COMPATIBILITY_GUIDE.md  BUILD.bazel  CMakeLists.txt  CMakeLists_cpp17.txt  CMakeLists_enhanced.txt  CMakeLists_old.txt  CMakeLists_simple.txt  LICENSE  LICENSE_BSD  LICENSE_BSD_4_CLAUSE  MODULE.bazel  PARALLEL_STL_COMPLETE.md  PARALLEL_STL_MIGRATION.md  QUICKSTART.md  README.md  README_COMPILER_CONFIG.md  README_PUBLIC.md  SESSION_STATE.md  SYNC_QUICK_REFERENCE.md  SYNC_SCRIPT_README.md  WORKSPACE  autonomous_mvp.py  benchmark_CMakeLists.txt  clang21_rebuild_config.sh  comparative_benchmark  demo_mvp.cpp  feature_test  fma_benchmark  generate_mvp.sh  generate_test_file  header_test  large_file_benchmark  openmp_scaling_results.json  (+26 more)
.github/: copilot-instructions.md
agents/: __init__.py  agent_orchestrator.py  configuration_agent.py  environment_agent.py  implementation_agent.py  orchestrator_enhanced.py  run_agents.py
agents/proto/: agent_service.proto  agent_service_simple.proto  build_service.proto  test_service.proto
ai/: .ai_agent_readme.md  AGENT_GUIDELINES.md  AGENT_TEST_POLICY.md  CLAUDE.md  copilot-instructions.md  gemini.md
ansible/: README.md  comprehensive_setup.yml  deploy.sh  fastjson_development_environment.yml  hosts.ini  inventory.ini
ansible/group_vars/: all.yml
benchmarks/: benchmark_results.txt  comparative_benchmark.cpp  fastjson_benchmark.cpp  fastjson_vs_simdjson.cpp  linq_benchmark.cpp  simd_multiregister_benchmark.cpp  turbo_benchmark.cpp  turbo_benchmark_64.cpp  turbo_benchmark_pshufb.cpp
cmake/: FastestJSONConfig.cmake.in  FastestJSONInTheWestConfig.cmake.in  FeatureDetection.cmake  config.h.in
cmake/modules/: FindOpenMPI_SourceCompiled.cmake  FindZeroMQ_SourceCompiled.cmake  FindgRPC_SourceCompiled.cmake
docs/: .llvm_build_state.md  .project_session_state.md  ARCHITECTURE.md  ARM_NEON_IMPLEMENTATION.md  Architecture.md  BENCHMARK_RESULTS.md  BUILD_SYSTEM_MIGRATION.md  CODING_STANDARDS.md  COMPARISON_WITH_SIMDJSON.md  DOCUMENTATION_POLICY.md  Dependencies.md  FUTURE_WORK_STATUS.md  ImplementationPlan.md  LOGGER_MIGRATION.md  MEMORY_LEAK_FIX.md  MVP.md  MultiAgentSystem.md  NUMA_IMPLEMENTATION.md  PARALLEL_PARSING_DESIGN.md  PRD.md  README.md  README_DETAILED.md  SIMD_COMPLETION_SUMMARY.md  SIMD_IMPLEMENTATION.md  TESTING_SUMMARY.md  TEST_ORGANIZATION_POLICY.md  TechnicalDesign.md  UTF16_UTF32_IMPLEMENTATION.md  VALGRIND_ANALYSIS_REPORT.md
docs/ai-agents/: CLAUDE.md  MultiAgentSystem.md  coding_standards.md
docs/development/: C++17_COMPATIBILITY_REPORT.md  MVP_COMPLETE.md
docs/results/: MVP_RESULTS.md
docs/toolchain/: CLANG21_BUILD_RESEARCH.md
documents/: API_REFERENCE.md  CONTRIBUTION_GUIDE.md  JSON_OBJECT_MAPPING.md  LINQ_IMPLEMENTATION.md  PUBLIC_VS_INTERNAL.md  README.md
examples/: README.md  fluent_api_examples.cpp  parallel_stl_example.cpp  simd_multiregister_demo.cpp  type_mappings_demo.cpp  unicode_examples.cpp
include/: fastjson.hpp  fastjson17.hpp
modules/: fastjson.cpp  fastjson.cppm  fastjson.cppm.backup  fastjson_compat.h  fastjson_fixed.cppm  fastjson_multiregister.cppm  fastjson_multiregister_parser.cppm  fastjson_parallel.cpp  fastjson_parallel.cppm  fastjson_parallel.cppm.backup  fastjson_parallel.h  fastjson_simd_api.cpp  fastjson_simd_api.h  fastjson_simd_index.h  fastjson_simd_multiregister.cpp  fastjson_simd_multiregister.cppm  fastjson_simd_multiregister_complex.cpp  fastjson_simd_multiregister_complex.h  fastjson_turbo.cppm  json_linq.cppm  json_linq.h  json_template.cppm  numa_allocator.cpp  numa_allocator.h  unicode.h
modules/gpu/: fastjson_rocm.h  json_cuda.cu  json_gpu.cpp  json_gpu.h  json_rocm.hip
python/: fastjson_bindings.cpp
python_bindings/: BUILD.sh  BUILD_AND_TEST.sh  CMakeLists.txt  README.md  TESTING_GUIDE.md  main.py  pyproject.toml
python_bindings/src/: fastjson_bindings.cpp
python_bindings/src/fastjson.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_bindings/tests/: conftest.py  test_128bit_minimal.py  test_comprehensive.py  test_fast_conversion.py  test_fastjson.py  test_parallelism.py  test_simd_features.py  test_thorough_128bit.py
scripts/: bulk_convert_to_logger.sh  convert_to_logger.py  setup_environment.sh  sync-from-public.sh  sync-to-public.sh
src/cli/: header_main.cpp  main.cpp
src/core/: json_value.cpp
src/fastestjsoninthewest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: CMakeLists.txt  basic_test.cpp  benchmark_fastjson_python.py  benchmark_multiregister.cpp  comprehensive_test.cpp  debug_parse.cpp  debug_utf8.cpp  feature_test.cpp  functional_api_test.cpp  header_only_test.cpp  linq_test.cpp  module_test.cpp  mvp_test.cpp  neon_test.cpp  numa_test.cpp  performance_demo.cpp  prefix_sum_test.cpp  simd_benchmark.cpp  simd_test  simd_test.cpp  simple_test.cpp  test_fastjson_nanobind.py  test_framework.h  test_framework_validation  test_framework_validation.cpp  test_multiregister_main.cpp  test_multiregister_parser.cppm  test_simd_multiregister_performance.cpp  test_turbo_correctness.cpp  test_utf8_validator.cpp  trail_calling_test.cpp  unicode_compliance_test.cpp  unicode_example.cpp  utf8_validation_test.cpp
tests/compatibility/: README.md
tests/integration/: README.md  test_complete_demo.cpp  test_feature_parity.cpp  test_large_file.cpp  test_large_file_parallel.cpp  test_module.cpp  test_parallel_module.cpp  test_parallel_parser.cpp
tests/performance/: README.md  fma_number_benchmark.cpp  instruction_set_benchmark.cpp  large_file_benchmark.cpp  large_file_load_benchmark.cpp  numa_parallel_benchmark.cpp  parallel_scaling_benchmark.cpp  simd_optimization_benchmark.cpp  test_simd_multiregister.cpp
tests/unit/: README.md  test_128bit.cpp  test_comprehensive.cpp  test_conversion_helpers.cpp  test_debug.cpp  test_object_fix.cpp  test_object_parse.cpp  test_simple.cpp
tools/: generate_test_file.cpp  run_valgrind_tests.sh  valgrind_comprehensive_test.sh
valgrind_results/: prefix_sum_final_memcheck.txt  prefix_sum_memcheck.txt
(+22 files in other folders)
